@@ -396,6 +396,8 @@ Optimizations
 
 * GITHUB#13742: Reorder checks in LRUQueryCache#count (Shubham Chaudhary)
 
+* GITHUB#13686: Replace Map<String,Object> with IntObjectHashMap for DV producer (Pan Guixin)
+
 Changes in runtime behavior
 ---------------------
 
